Could not execute AT when modem is in a failed state
Duo to we could get modem information with command mmcli -m MODEM-2
when even modem is in a failed state
.
Status | state: failed
| failed reason: sim-missing
| power state: on
I think execute AT when the modem is in a failed state
should be accepted.
For example, If I want change operating mode for u-blox module, I have to run mmcli -m MODEM-2 --command="AT+UUSBCONF=2"
but it will fail because of modem is in a failed state
.
Edited by Remus Wu