iface-modem: allow Command() while in Failed state

Allow the generic command API while in FAILED state, in case the modem
integrator has some special commands to recover the device.

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/issues/163